<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:padding="@dimen/spacing_24"><com.google.android.material.appbar.MaterialToolbar android:id="@+id/toolbar" style="@style/Widget.Lumora.Toolbar" android:layout_width="match_parent" android:layout_height="wrap_content" android:title="@string/about"/><ImageView android:layout_width="96dp" android:layout_height="96dp" android:layout_gravity="center_horizontal" android:layout_marginTop="@dimen/spacing_32" android:contentDescription="@string/app_name" android:src="@mipmap/ic_launcher"/><TextView style="@style/TextAppearance.Lumora.HeadlineSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:text="@string/app_name"/><TextView android:id="@+id/version" style="@style/TextAppearance.Lumora.BodyMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal"/><com.google.android.material.button.MaterialButton style="@style/Widget.Lumora.Button.TextButton" android:layout_width="wrap_content" android:layout_height="48dp" android:text="@string/privacy_policy"/><com.google.android.material.button.MaterialButton style="@style/Widget.Lumora.Button.TextButton" android:layout_width="wrap_content" android:layout_height="48dp" android:text="@string/terms_conditions"/><TextView style="@style/TextAppearance.Lumora.BodySmall" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_24" android:text="@string/open_source_notice"/></LinearLayout>
