<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_24">

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Lumora.TitleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_image_source" />

    <LinearLayout
        android:id="@+id/btnGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_24"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/spacing_12">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_gallery"
            app:tint="?attr/colorPrimary" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.Lumora.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:text="@string/btn_gallery" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/spacing_12">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_camera"
            app:tint="?attr/colorPrimary" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.Lumora.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:text="@string/btn_camera" />
    </LinearLayout>

</LinearLayout>
